--- a/medical education.html
+++ b/medical education.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section once="footers" class="cid-rPPD5UTjuP" id="footer7-in">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section once="footers" class="cid-rPPD5UTjuP" id="footer7-in">
 
     
 
