create github pages

--- a/Coming Soon.html
+++ b/Coming Soon.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-2" href="https://mobirise.co">Research Labs</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-2" href="index.html">Research Labs</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
+<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
 
     
 
@@ -120,7 +120,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MNkeXs3/23NlTIeF1aMTpgwMgHGa8DG07mavMRL7PMvDKmJrWNluh5lztvNwKosA5iXreywjWPE8FpC4mJtmeQkluhc5wHkbL6tTlRblsxoL0gaMAmvBrind4uX/2sZv">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cSWxv/lzHdllJaDkB91/UB/Mzw8cJPYEf1bXPJUMVxjnPIaMrq1rvhm6inl5n1p67WuGtkEbIAzfmJpYgRo2023p1TxTuAeZmdsA9K8UWjE4adK9szNpz4G0rKh+Lb1p">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
