--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-2" href="https://mobirise.co">Research Labs</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-2" href="index.html">Research Labs</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-rKvM8XT5qr" id="header16-fq">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-rKvM8XT5qr" id="header16-fq">
 
     
 
@@ -269,7 +269,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KmAtk9qK4oOszoff6ClGvLH7ghUldOMhYYCQsXr4E3LTRl20LRBk0AlgbUv0kNuK8wkB+6TLTlqzawqQ0Q94ozsAcwd4ncgQF07vcbCNRjy+wlNL1seTqrX/BJnYkbp8">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2WYKY4no3vIerMzB4VPhmzL5csKZyoVaXEbw9tz5NPVT6V6KYxVdTDectzPntICwyK4pQV3VZ39CtXPdK5eAzcDIPEzJREGsBsnJ34ytrekd/FNYPKhJGPwhCWZtWgo7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
