--- a/medical education.html
+++ b/medical education.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-2" href="https://mobirise.co">Research Labs</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-2" href="index.html">Research Labs</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section once="footers" class="cid-rPPD5UTjuP" id="footer7-in">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section once="footers" class="cid-rPPD5UTjuP" id="footer7-in">
 
     
 
