--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header1 cid-rKvM8XT5qr" id="header16-fq">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="header1 cid-rKvM8XT5qr" id="header16-fq">
 
     
 
@@ -113,10 +113,10 @@
             <div class="item features-image col-lg-4 col-md-6 col-sm-12">
                 <div class="item-wrapper">
                     <div class="item-img card-img">
-                        <a href="medicalschool.html"><img src="assets/images/istockphoto-531825628-640x360.jpeg" alt="" title=""></a>
+                        <a href="Coming Soon.html"><img src="assets/images/istockphoto-531825628-640x360.jpeg" alt="" title=""></a>
                     </div>
                     <div class="item-content">
-                        <h4 class="item-title mbr-fonts-style pb-3 display-5">MedicalIClinical School</h4>
+                        <h4 class="item-title mbr-fonts-style pb-3 display-5"><a href="Coming Soon.html" class="text-black">MedicalIClinical School</a></h4>
                         <h5 class="item-subtitle mbr-fonts-style pb-3 display-4">Lecture notes &amp; course outlines</h5>
                         <p class="item-text display-7">Get your lecture notes according to your course outline. A list of medical courses, recommended Medical schools and universities.&nbsp;</p>
                     </div>
@@ -129,7 +129,7 @@
                         <a href="medicalpdfs.html"><img src="assets/images/02-doctor-insider-tips-to-choosing-the-best-primary-care-doctor-519507367-stokkete-700x467.jpeg" alt="" title=""></a>
                     </div>
                     <div class="item-content">
-                        <h4 class="item-title mbr-fonts-style pb-3 display-5">Download Medical TextBooksISlides</h4>
+                        <h4 class="item-title mbr-fonts-style pb-3 display-5"><a href="Coming Soon.html" class="text-black">Download Medical TextBooksISlides</a></h4>
                         <h5 class="item-subtitle mbr-fonts-style pb-3 display-4">Pdf, Documents, ppt &amp; doc</h5>
                         <p class="item-text display-7">Get quick Downloads for Medical Textbooks (pdf, doc, docx formats), PowerPoint presentations (ppt &amp; pptx). Books for all course units from the finest authors.</p>
                     </div>
@@ -269,7 +269,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2WYKY4no3vIerMzB4VPhmzL5csKZyoVaXEbw9tz5NPVT6V6KYxVdTDectzPntICwyK4pQV3VZ39CtXPdK5eAzcDIPEzJREGsBsnJ34ytrekd/FNYPKhJGPwhCWZtWgo7">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OjForXT9U1vwP+eyS4Jaa0WAv6kyDq17gvOGVTNUeOP+UcFKmwFz9rhk6U81/aKOdp+x4MQTfJZ7IXI8+7R+ohqWepp2S5WDMi7PnXDGxI+kOD0/gNRsKTQhyggajNBK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
