--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section contacts3 cid-rRio0PrlbC" id="contacts3-j2">
+<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="mbr-section contacts3 cid-rRio0PrlbC" id="contacts3-j2">
     <!---->
     
     <!---->
@@ -121,7 +121,7 @@
                         <a href="Coming Soon.html"><img src="assets/images/istockphoto-531825628-640x360.jpeg" alt="" title=""></a>
                     </div>
                     <div class="item-content">
-                        <h4 class="item-title mbr-fonts-style pb-3 display-5"><a href="Coming Soon.html" class="text-black">MedicalIClinical School</a></h4>
+                        <h4 class="item-title mbr-fonts-style pb-3 display-5"><a href="medical education.html" class="text-black">MedicalIClinical School</a></h4>
                         <h5 class="item-subtitle mbr-fonts-style pb-3 display-4">Lecture notes &amp; course outlines</h5>
                         <p class="item-text display-7">Get your lecture notes according to your course outline. A list of medical courses, recommended Medical schools and universities.&nbsp;</p>
                     </div>
@@ -274,7 +274,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1R+ufn1GJ+Q1HXgDT7caI0XGHe2/5SnADbZCsGaJbynCEq0MfkIyvJvwU+x79f9g+6EPo0LTwcz1EMrNY6taWJBgGIG7VRqptfVxWc08yLQ/xIXF2O15cEdC1Ty3aefW">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DYuLIbj1RWA+Y4AqWDriVzFjM1yS7fol3u6KVyUBRedm4EXRKeg39YK5Wx7xhBXgXx9C/yiqUL1uorYsZ3T0CK37zFbPID7KqHyi0IkvFi4fAG0J7ojQ5WJaVrL3YOq/">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
