--- a/Coming Soon.html
+++ b/Coming Soon.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
 
     
 
@@ -114,7 +114,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kWRqBqgwKQHZedsViFyyyvkDOnTv9yojFvgcNIIqhkpXgFUaxTuEYmp0PJNphs1Zoydf8duQj18uicAfK9ulUfIAJJqbdCN2zcQh19cKWxyZLvs8CjJRH9paxYGK0/0h">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Rbm1NsljY2abcQYn/IHIxUJZN9yOBjcZJP7c9ycIVYTrqsOOwdW3AroMtroTDsI5diQosnDX+K2Itd5L7QXOEoUi0drY7e1ctc2LfS0F2OWIHSWcXVu6XIuSWbHj/HlT">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
