--- a/Health science courses.html
+++ b/Health science courses.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="mbr-section content5 cid-rRGoczz3PL" id="content5-km">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-rRGoczz3PL" id="content5-km">
 
     
 
