create github pages

--- a/page10.html
+++ b/page10.html
@@ -51,7 +51,7 @@
                 </li><li class="nav-item"><a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>
                         
                         Services
-                    </a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-warning display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-7" href="https://mobirise.co">New Item</a></div></li>
+                    </a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-warning display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-7" href="https://mobirise.co">New Item</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a>
                 </li><li class="nav-item"><a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section once="footers" class="cid-rRvjA0QeVH" id="footer6-kj">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section once="footers" class="cid-rRvjA0QeVH" id="footer6-kj">
 
     
 
