--- a/Coming Soon.html
+++ b/Coming Soon.html
@@ -52,7 +52,7 @@
                 </li><li class="nav-item"><a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>
                         
                         Services
-                    </a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-warning display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-7" href="https://mobirise.co">New Item</a></div></li>
+                    </a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-warning display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-7" href="https://mobirise.co">New Item</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a>
                 </li><li class="nav-item"><a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
 
     
 
@@ -114,7 +114,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Rbm1NsljY2abcQYn/IHIxUJZN9yOBjcZJP7c9ycIVYTrqsOOwdW3AroMtroTDsI5diQosnDX+K2Itd5L7QXOEoUi0drY7e1ctc2LfS0F2OWIHSWcXVu6XIuSWbHj/HlT">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="t2WkXeOqqeZgvrnZ1XCcsxPbZxCiCY9jtu+4u/3AhyBlkUf3SvGkQI7NTwyBpdniOkRg/96K9YluYoI2+SObqcCLp0Dl6hQh5gCQtaK+++TTxpKfyXFLvGv4qU+hqou4">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
