--- a/year1sem1.html
+++ b/year1sem1.html
@@ -51,7 +51,7 @@
                 </li><li class="nav-item"><a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>
                         
                         Services
-                    </a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-warning display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-7" href="https://mobirise.co">New Item</a></div></li>
+                    </a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-warning display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-7" href="https://mobirise.co">New Item</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>Research</a>
                 </li><li class="nav-item"><a class="nav-link link text-warning display-7" href="https://mobirise.co"><span class="mobi-mbri mobi-mbri-user mbr-iconfont mbr-iconfont-btn" style="font-size: 10px;"></span>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-rRG75c2feo" id="content5-k5">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-rRG75c2feo" id="content5-k5">
 
     
 
@@ -91,7 +91,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Anatomy and Physiology</strong></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Anatomy &amp; Physiology</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7"><a href="year1sem1anatomy1.html" class="text-secondary">Semester One</a><br>Mobirise is an easy website builder - just drop site elements to your page.<br></p>
                     </div>
                 </div>
