--- a/page10.html
+++ b/page10.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section once="footers" class="cid-rRvjA0QeVH" id="footer6-kj">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section once="footers" class="cid-rRvjA0QeVH" id="footer6-kj">
 
     
 
