--- a/page6.html
+++ b/page6.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content4 cid-rRTUTLgWqX" id="content4-l9">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content4 cid-rRTUTLgWqX" id="content4-l9">
 
     
 
@@ -93,11 +93,11 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_21" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_20" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-7">Diploma in Clinical Medicine and Community Health</h4>
                                 </a>
                             </div>
-                            <div id="collapse1_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                  <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><a href="page12.html" class="text-secondary">Certificate</a>
 <br>Mobirise is an easy website builder - just drop site elements to your page.
@@ -117,12 +117,12 @@ just drop site elements to your page.
                       
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_21" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_20" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-7">Musculoskeletal system</h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Skeletal system
 </strong><br><br>Bone tissue: Development, Classifications, Functions<br><br>Fractures and bone healing<br>
@@ -136,11 +136,11 @@ just drop site elements to your page.
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_21" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_20" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-7">Cardiovascular system</h4>
                                 </a>
                             </div>
-                            <div id="collapse3_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Blood
 </strong><br><br>Components of blood and functions<br>
@@ -156,11 +156,11 @@ just drop site elements to your page.
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_21" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_20" aria-expanded="false" aria-controls="collapse4">
                                     <h4 class="mbr-fonts-style display-7">Respiratory System</h4>
                                 </a>
                             </div>
-                            <div id="collapse4_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Organs of the respiratory system, their structure and functions.<br><br>Physiology of respiration: Pulmonary ventilation, External Respiration, Internal
 <br>respiration, Lung volumes and capacities<br><br>Control of respiration<br>
@@ -170,11 +170,11 @@ just drop site elements to your page.
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_21" aria-expanded="false" aria-controls="collapse5">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_20" aria-expanded="false" aria-controls="collapse5">
                                     <h4 class="mbr-fonts-style display-7">Urinary system.</h4>
                                 </a>
                             </div>
-                            <div id="collapse5_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse5_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Organs of the urinary system, structural composition and functions<br>
 <br>Physiology of the urinary system<br>
@@ -184,11 +184,11 @@ just drop site elements to your page.
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_21" aria-expanded="false" aria-controls="collapse6">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_20" aria-expanded="false" aria-controls="collapse6">
                                     <h4 class="mbr-fonts-style display-7">Intergumentary system.</h4>
                                 </a>
                             </div>
-                            <div id="collapse6_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse6_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Structure and functions of the skin and appenadages<br>
 <br>Disorders of the skin and its appendages</p>
