--- a/year1sem1anatomy1.html
+++ b/year1sem1anatomy1.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content4 cid-rRv6GrGCiW" id="content4-j3">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content4 cid-rRv6GrGCiW" id="content4-j3">
 
     
 
@@ -93,11 +93,11 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_42" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_41" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-7">Introduction to the human body</h4>
                                 </a>
                             </div>
-                            <div id="collapse1_42" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_41" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                  <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><a href="page12.html" class="text-danger">Definition of terms and concepts, anatomical position, terms of movements, anatomical</a><br><br>Planes and body cavities.<br><br>Structure and functions of the cell.<br><br>Primary tissues and their functions<br><br>Disorders of cells and tissues.<br></p>
                                 </div>
@@ -109,12 +109,12 @@
                       
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_42" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_41" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-7">Musculoskeletal system</h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_42" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_41" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Skeletal system
 </strong><br><br>Bone tissue: Development, Classifications, Functions<br><br>Fractures and bone healing<br>
@@ -128,11 +128,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_42" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_41" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-7">Cardiovascular system</h4>
                                 </a>
                             </div>
-                            <div id="collapse3_42" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_41" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Blood
 </strong><br><br>Components of blood and functions<br>
@@ -148,11 +148,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_42" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_41" aria-expanded="false" aria-controls="collapse4">
                                     <h4 class="mbr-fonts-style display-7">Respiratory System</h4>
                                 </a>
                             </div>
-                            <div id="collapse4_42" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_41" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Organs of the respiratory system, their structure and functions.<br><br>Physiology of respiration: Pulmonary ventilation, External Respiration, Internal
 <br>respiration, Lung volumes and capacities<br><br>Control of respiration<br>
@@ -162,11 +162,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_42" aria-expanded="false" aria-controls="collapse5">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_41" aria-expanded="false" aria-controls="collapse5">
                                     <h4 class="mbr-fonts-style display-7">Urinary system.</h4>
                                 </a>
                             </div>
-                            <div id="collapse5_42" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse5_41" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Organs of the urinary system, structural composition and functions<br>
 <br>Physiology of the urinary system<br>
@@ -176,11 +176,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_42" aria-expanded="false" aria-controls="collapse6">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_41" aria-expanded="false" aria-controls="collapse6">
                                     <h4 class="mbr-fonts-style display-7">Intergumentary system.</h4>
                                 </a>
                             </div>
-                            <div id="collapse6_42" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse6_41" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Structure and functions of the skin and appenadages<br>
 <br>Disorders of the skin and its appendages</p>
