create github pages

--- a/Coming Soon.html
+++ b/Coming Soon.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
 
     
 
@@ -114,7 +114,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GKsOi3keVx4PNISHsu7wJ76woCj4bqt7Wu7cmfhsSVupMYfwKfaKapQD5F0/Onq9WBlCZ+8bL7GsWHKrWoptbJCu7AY1F+GXW88fFY2DDnq/XnVxdYQf9nMnF5BOGaxI">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LR7vS9DWH7YnKJonplaAB/TG4FlUz2r29MjTF8fLSc7W59u3iRFuxfpMLV7e4wVJZGXDI4x+mgwRUjML6cABpLRGQkS1s9su/52OGPBYB1hAX759mdARYJnfx8ZMarrY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
