create github pages

--- a/page10.html
+++ b/page10.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section class="menu cid-rUJxABegKK" once="menu" id="menu1-ma">
+  <section class="menu cid-rUK7G8BUjm" once="menu" id="menu1-mb">
 
     
 
@@ -83,7 +83,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/d">website maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
