create github pages

--- a/page7.html
+++ b/page7.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="mbr-section content5 cid-rRGgOLs9VE" id="content5-kb">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-rRGgOLs9VE" id="content5-kb">
 
     
 
@@ -111,7 +111,7 @@
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Paediatrics care II</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="index.html" class="text-secondary">Childhood conditions</a><br>Traumatic conditions,&nbsp; congenital abnormalities,&nbsp;HIV/ AIDS, IMCH etc<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="year3sem2pead2.html" class="text-secondary">Childhood conditions</a><br><a href="year3sem2pead2.html" class="text-danger">Traumatic conditions,&nbsp; congenital abnormalities,&nbsp;HIV/ AIDS, IMCH etc</a><br></p>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <div class="card-wrapper media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Minor surgery II</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="Coming Soon.html" class="text-secondary">Surgical procedures&nbsp;</a><br>Mobirise is an easy website builder - just drop site elements to your page.
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="year3sem2surgery2.html" class="text-secondary">Surgical procedures&nbsp;</a><br>Mobirise is an easy website builder - just drop site elements to your page.
 <br></p>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                 <div class="card-wrapper media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Mental health care II</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="medical education.html" class="text-secondary">Mental Disorders</a><br>Mobirise is an easy website builder - just drop site elements to your page.
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="year3sem2mental2.html" class="text-secondary">Mental Disorders</a><br>Mobirise is an easy website builder - just drop site elements to your page.
 <br></p>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Clinical Skills Practice</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="medical education.html" class="text-secondary">OSCE:&nbsp;Clinical focus</a><br>Mobirise is an easy website builder - just drop site elements to your page.<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="year3sem2osce.html" class="text-secondary">OSCE:&nbsp;Clinical focus</a><br>Mobirise is an easy website builder - just drop site elements to your page.<br></p>
                     </div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                 <div class="card-wrapper media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Research project Proposal</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="page13.html" class="text-secondary">Topic selection and preparations</a><br>Mobirise is an easy website builder - just drop site elements to your page.
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="page18.html" class="text-secondary">Topic selection and preparations</a><br>Mobirise is an easy website builder - just drop site elements to your page.
 <br></p>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                 <div class="card-wrapper media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Research project report</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="page12.html" class="text-secondary">Data collection and analysis</a><br>Mobirise is an easy website builder - just drop site elements to your page.
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="page18.html" class="text-secondary">Data collection and analysis</a><br>Mobirise is an easy website builder - just drop site elements to your page.
 <br></p>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Health Services Management field Report</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">&nbsp;<a href="page10.html" class="text-secondary">Field report from a health center</a><br>Mobirise is an easy website builder - just drop site elements to your page.<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">&nbsp;<a href="page18.html" class="text-secondary">R</a><a href="page18.html" class="text-secondary">eport from a health center</a><br>Mobirise is an easy website builder - just drop site elements to your page.<br></p>
                     </div>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                 <div class="card-wrapper media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-2"><strong>Log Book Compeletion</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="Coming Soon.html" class="text-secondary">Se</a><br>Mobirise is an easy website builder - just drop site elements to your page.
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="page18.html" class="text-secondary">Log Book Compeletion</a><br>Mobirise is an easy website builder - just drop site elements to your page.
 <br></p>
                     </div>
                 </div>
