create github pages

--- a/page12.html
+++ b/page12.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section info4 cid-rUYvho9qO5" id="info4-nf">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section info4 cid-rUYvho9qO5" id="info4-nf">
 
     
 
