create github pages

--- a/Coming Soon.html
+++ b/Coming Soon.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="countdown2 cid-rPNTSodpDe" id="countdown2-ii">
 
     
 
@@ -122,7 +122,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NDMx4/oY+2JoqXrQcIksyKmDQs40XR6IIOrCt2JKpogDd5k02BTHiF9a67WJzMC0ifJkfj1qn9NjHLI3AQc08GT5/vaUVVuq/gC1A9xJP15u7PY70XWx2oE2VPSIkm47">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="U/YZhBboNJmhXfN8UkBK5CeNNDXk8djJrzRymIjXANtOlot9IHR2hwe8gHWnRNzdtjyCp67pYyCT6i1W5i2+7oBlpbCxKK9LitJMROq44rRRDhw+SQ3yfSnVcrtcuNI2">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
