--- a/page7.html
+++ b/page7.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-rRGgOLs9VE" id="content5-kb">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="mbr-section content5 cid-rRGgOLs9VE" id="content5-kb">
 
     
 
