create github pages

--- a/content.html
+++ b/content.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section info3 cid-rWw8kzeFCu" id="info3-2w">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section info3 cid-rWw8kzeFCu" id="info3-2w">
 
     
 
