create github pages

--- a/Health sciences.html
+++ b/Health sciences.html
@@ -64,17 +64,17 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-secondary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
+                    <a class="nav-link link dropdown-toggle text-primary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="https://mobirise.co">New Item</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="https://mobirise.co" aria-expanded="false">
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-7" href="https://mobirise.co">New Item</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobirise.co" aria-expanded="false">
                         Services
                     </a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-secondary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
+                    <a class="nav-link link dropdown-toggle text-primary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">
                         About Us
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="https://mobirise.co">New Item</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="https://mobirise.co">
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-7" href="https://mobirise.co">New Item</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobirise.co">
                         About Us
                     </a></li></ul>
              <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-7" href="Search Engine.html"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 13px; color: rgb(255, 255, 255);"></span>Search</a></div>
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section content5 cid-rWvjG3NauQ" id="content5-29">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content5 cid-rWvjG3NauQ" id="content5-29">
 
     
 
@@ -267,7 +267,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jHjJInfXmD5MMzyDKf1AiwpQEkN/Dcv5l9hypiw9JtjdwT23uFz2fYIitVQN7Clo0nYF7G3TcgP5lH7dROpE/AxrZdZBuiMx+aMgFg5YcQ1ov+o1woXoUfkZstO82PXf">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tfhUNGV0ft1mbyj1Z6G34Hw+NxgKuDRNE7EZklhBvxAftHoWO3Sa0FfT4OYv2sy5ZexvfNXduU1vCQA01SmBz9T17cFuk/fgydshgwM2VxNQwK/tpbBViFKbBwPkJ5bD">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
