--- a/page2.html
+++ b/page2.html
@@ -63,17 +63,17 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-secondary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
+                    <a class="nav-link link dropdown-toggle text-primary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="https://mobirise.co">New Item</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="https://mobirise.co" aria-expanded="false">
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-7" href="https://mobirise.co">New Item</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobirise.co" aria-expanded="false">
                         Services
                     </a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-secondary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
+                <li class="nav-item dropdown open">
+                    <a class="nav-link link dropdown-toggle text-primary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">
                         About Us
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="https://mobirise.co">New Item</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="https://mobirise.co">
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-7" href="https://mobirise.co">New Item</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobirise.co">
                         About Us
                     </a></li></ul>
              <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-7" href="Search Engine.html"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 13px; color: rgb(255, 255, 255);"></span>Search</a></div>
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section info3 cid-rWvCFLnE16" id="info3-2l">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="mbr-section info3 cid-rWvCFLnE16" id="info3-2l">
 
     
 
@@ -106,8 +106,8 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-5"><strong>Course Unit: Applied Anatomy and Physiology One</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">The following are the topics and subtopics to be covered in Anatomy &amp; Physiology</h3>
+                <h2 class="align-center pb-3 mbr-fonts-style display-5"><strong>Course Unit: Applied Anatomy and Physiology&nbsp;</strong></h2>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7">The following are the topics and subtopics to be covered in Anatomy &amp; Physiology</h3>
                 
             </div>
         </div>
@@ -130,12 +130,12 @@
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
                                 <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_18" aria-expanded="false" aria-controls="collapse1">
-                                    <h4 class="mbr-fonts-style display-7">past paper questions answers</h4>
+                                    <h4 class="mbr-fonts-style display-7">past paper question&nbsp;</h4>
                                 </a>
                             </div>
                             <div id="collapse1_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                  <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7"><a href="page12.html" class="text-black">Definition of terms and concepts, anatomical position, terms of movements, anatomical</a><br><br>Planes and body cavities.<br><br>Structure and functions of the cell.<br><br>Primary tissues and their functions<br><br>Disorders of cells and tissues.<br></p>
+                                    <p class="mbr-fonts-style panel-text display-7"><a href="page12.html" class="text-black">Definition of terms and concepts, anatomical position, terms of movements, anatomical</a>&nbsp;<br><br>Planes and body cavities.<br><br>Structure and functions of the cell.<br><br>Primary tissues and their functions<br><br>Disorders of cells and tissues.<br></p>
                                 </div>
                             </div>
                         </div>
